// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalLeafletMap /> should not render a map with visible = false 1`] = `""`;

exports[`<ProposalLeafletMap /> should render a map with only valid markers 1`] = `
<ProposalLeafletMapstyle__MapContainer
  isMobile={false}
>
  <Address
    debounce={1200}
    getAddress={[Function]}
    getPosition={[Function]}
    id="address"
    onChange={[Function]}
    placeholder="proposal.map.form.placeholder"
    value={null}
  />
  <ProposalLeafletMapstyle__StyledMap
    center={
      Object {
        "lat": 48.8586047,
        "lng": 2.3137325,
      }
    }
    doubleClickZoom={false}
    dragging={true}
    gestureHandling={true}
    maxZoom={22}
    style={
      Object {
        "height": "50vw",
        "zIndex": 0,
      }
    }
    tap={true}
    whenCreated={[Function]}
    zoom={12}
    zoomControl={false}
  >
    <ForwardRef(LeafComponent)
      attribution="© <a href=\\"https://www.mapbox.com/about/maps/\\">Mapbox</a> © <a href=\\"http://osm.org/copyright\\">OpenStreetMap</a> <a href=\\"https://www.mapbox.com/map-feedback/#/-74.5/40/10\\">Improve this map</a>"
      url="https://api.mapbox.com/styles/v1/capcollectif/***REMOVED***/tiles/256/{z}/{x}/{y}?access_token=***REMOVED***"
    />
    <ForwardRef(ContainerComponent)
      maxClusterRadius={30}
      onClick={[Function]}
      showCoverageOnHover={false}
      spiderfyDistanceMultiplier={4}
      spiderfyOnMaxZoom={true}
      zoomToBoundsOnClick={true}
    >
      <ForwardRef(ContainerComponent)
        alt="marker-0"
        eventHandlers={
          Object {
            "click": [Function],
          }
        }
        icon={
          NewClass {
            "_initHooksCalled": true,
            "options": Object {
              "className": "preview-icn",
              "html": "<IconMock fill=\\"#EEE\\" width=\\"40\\" height=\\"40\\" class=\\"icon\\" aria-hidden=\\"true\\" style=\\"vertical-align:middle;flex-shrink:0\\" data-reactroot=\\"\\"></IconMock>",
              "iconAnchor": Array [
                20,
                40,
              ],
              "iconSize": Array [
                40,
                40,
              ],
              "popupAnchor": Array [
                0,
                -40,
              ],
            },
          }
        }
        key="0"
        position={
          Array [
            49.8397,
            24.0297,
          ]
        }
      >
        <ProposalLeafletMapstyle__BlankPopup
          closeButton={false}
        >
          <Relay(Connect(ProposalMapPopover))
            proposal={
              Object {
                "$fragmentRefs": null,
                "$refType": null,
                "address": Object {
                  "lat": 49.8397,
                  "lng": 24.0297,
                },
                "category": Object {
                  "color": "#EEE",
                  "icon": null,
                },
                "id": "pid1",
              }
            }
          />
        </ProposalLeafletMapstyle__BlankPopup>
      </ForwardRef(ContainerComponent)>
      <ForwardRef(ContainerComponent)
        alt="marker-1"
        eventHandlers={
          Object {
            "click": [Function],
          }
        }
        icon={
          NewClass {
            "_initHooksCalled": true,
            "options": Object {
              "className": "preview-icn",
              "html": "<IconMock fill=\\"blue\\" width=\\"40\\" height=\\"40\\" class=\\"icon\\" aria-hidden=\\"true\\" style=\\"vertical-align:middle;flex-shrink:0\\" data-reactroot=\\"\\"></IconMock><IconMock fill=\\"#ffffff\\" width=\\"16\\" height=\\"16\\" class=\\"icon\\" aria-hidden=\\"true\\" style=\\"vertical-align:middle;flex-shrink:0\\" data-reactroot=\\"\\"></IconMock>",
              "iconAnchor": Array [
                20,
                40,
              ],
              "iconSize": Array [
                40,
                40,
              ],
              "popupAnchor": Array [
                0,
                -40,
              ],
            },
          }
        }
        key="1"
        position={
          Array [
            52.2297,
            21.0122,
          ]
        }
      >
        <ProposalLeafletMapstyle__BlankPopup
          closeButton={false}
        >
          <Relay(Connect(ProposalMapPopover))
            proposal={
              Object {
                "$fragmentRefs": null,
                "$refType": null,
                "address": Object {
                  "lat": 52.2297,
                  "lng": 21.0122,
                },
                "category": Object {
                  "color": "blue",
                  "icon": "water",
                },
                "id": "pid2",
              }
            }
          />
        </ProposalLeafletMapstyle__BlankPopup>
      </ForwardRef(ContainerComponent)>
      <ForwardRef(ContainerComponent)
        alt="marker-2"
        eventHandlers={
          Object {
            "click": [Function],
          }
        }
        icon={
          NewClass {
            "_initHooksCalled": true,
            "options": Object {
              "className": "preview-icn",
              "html": "<IconMock fill=\\"purple\\" width=\\"40\\" height=\\"40\\" class=\\"icon\\" aria-hidden=\\"true\\" style=\\"vertical-align:middle;flex-shrink:0\\" data-reactroot=\\"\\"></IconMock><div fill=\\"#ffffff\\" width=\\"16\\" height=\\"16\\" class=\\"icon\\" aria-hidden=\\"true\\" style=\\"vertical-align:middle;flex-shrink:0\\" data-reactroot=\\"\\"></div>",
              "iconAnchor": Array [
                20,
                40,
              ],
              "iconSize": Array [
                40,
                40,
              ],
              "popupAnchor": Array [
                0,
                -40,
              ],
            },
          }
        }
        key="2"
        position={
          Array [
            51.5074,
            -0.0901,
          ]
        }
      >
        <ProposalLeafletMapstyle__BlankPopup
          closeButton={false}
        >
          <Relay(Connect(ProposalMapPopover))
            proposal={
              Object {
                "$fragmentRefs": null,
                "$refType": null,
                "address": Object {
                  "lat": 51.5074,
                  "lng": -0.0901,
                },
                "category": Object {
                  "color": "purple",
                  "icon": "wheelchair",
                },
                "id": "pid4",
              }
            }
          />
        </ProposalLeafletMapstyle__BlankPopup>
      </ForwardRef(ContainerComponent)>
    </ForwardRef(ContainerComponent)>
    <ForwardRef(LeafComponent)
      position="bottomright"
    />
  </ProposalLeafletMapstyle__StyledMap>
</ProposalLeafletMapstyle__MapContainer>
`;

exports[`<ProposalLeafletMap /> should render a map with proposals still loading 1`] = `
<ProposalLeafletMapstyle__MapContainer
  isMobile={false}
>
  <Address
    debounce={1200}
    getAddress={[Function]}
    getPosition={[Function]}
    id="address"
    onChange={[Function]}
    placeholder="proposal.map.form.placeholder"
    value={null}
  />
  <ProposalLeafletMapstyle__StyledMap
    center={
      Object {
        "lat": 48.8586047,
        "lng": 2.3137325,
      }
    }
    doubleClickZoom={false}
    dragging={true}
    gestureHandling={true}
    maxZoom={22}
    style={
      Object {
        "height": "50vw",
        "zIndex": 0,
      }
    }
    tap={true}
    whenCreated={[Function]}
    zoom={12}
    zoomControl={false}
  >
    <ForwardRef(LeafComponent)
      attribution="© <a href=\\"https://www.mapbox.com/about/maps/\\">Mapbox</a> © <a href=\\"http://osm.org/copyright\\">OpenStreetMap</a> <a href=\\"https://www.mapbox.com/map-feedback/#/-74.5/40/10\\">Improve this map</a>"
      url="https://api.mapbox.com/styles/v1/capcollectif/***REMOVED***/tiles/256/{z}/{x}/{y}?access_token=***REMOVED***"
    />
    <ForwardRef(ContainerComponent)
      maxClusterRadius={30}
      onClick={[Function]}
      showCoverageOnHover={false}
      spiderfyDistanceMultiplier={4}
      spiderfyOnMaxZoom={true}
      zoomToBoundsOnClick={true}
    >
      <ForwardRef(ContainerComponent)
        alt="marker-0"
        eventHandlers={
          Object {
            "click": [Function],
          }
        }
        icon={
          NewClass {
            "_initHooksCalled": true,
            "options": Object {
              "className": "preview-icn",
              "html": "<IconMock fill=\\"#EEE\\" width=\\"40\\" height=\\"40\\" class=\\"icon\\" aria-hidden=\\"true\\" style=\\"vertical-align:middle;flex-shrink:0\\" data-reactroot=\\"\\"></IconMock>",
              "iconAnchor": Array [
                20,
                40,
              ],
              "iconSize": Array [
                40,
                40,
              ],
              "popupAnchor": Array [
                0,
                -40,
              ],
            },
          }
        }
        key="0"
        position={
          Array [
            49.8397,
            24.0297,
          ]
        }
      >
        <ProposalLeafletMapstyle__BlankPopup
          closeButton={false}
        >
          <Relay(Connect(ProposalMapPopover))
            proposal={
              Object {
                "$fragmentRefs": null,
                "$refType": null,
                "address": Object {
                  "lat": 49.8397,
                  "lng": 24.0297,
                },
                "category": Object {
                  "color": "#EEE",
                  "icon": null,
                },
                "id": "pid1",
              }
            }
          />
        </ProposalLeafletMapstyle__BlankPopup>
      </ForwardRef(ContainerComponent)>
      <ForwardRef(ContainerComponent)
        alt="marker-1"
        eventHandlers={
          Object {
            "click": [Function],
          }
        }
        icon={
          NewClass {
            "_initHooksCalled": true,
            "options": Object {
              "className": "preview-icn",
              "html": "<IconMock fill=\\"blue\\" width=\\"40\\" height=\\"40\\" class=\\"icon\\" aria-hidden=\\"true\\" style=\\"vertical-align:middle;flex-shrink:0\\" data-reactroot=\\"\\"></IconMock><IconMock fill=\\"#ffffff\\" width=\\"16\\" height=\\"16\\" class=\\"icon\\" aria-hidden=\\"true\\" style=\\"vertical-align:middle;flex-shrink:0\\" data-reactroot=\\"\\"></IconMock>",
              "iconAnchor": Array [
                20,
                40,
              ],
              "iconSize": Array [
                40,
                40,
              ],
              "popupAnchor": Array [
                0,
                -40,
              ],
            },
          }
        }
        key="1"
        position={
          Array [
            52.2297,
            21.0122,
          ]
        }
      >
        <ProposalLeafletMapstyle__BlankPopup
          closeButton={false}
        >
          <Relay(Connect(ProposalMapPopover))
            proposal={
              Object {
                "$fragmentRefs": null,
                "$refType": null,
                "address": Object {
                  "lat": 52.2297,
                  "lng": 21.0122,
                },
                "category": Object {
                  "color": "blue",
                  "icon": "water",
                },
                "id": "pid2",
              }
            }
          />
        </ProposalLeafletMapstyle__BlankPopup>
      </ForwardRef(ContainerComponent)>
      <ForwardRef(ContainerComponent)
        alt="marker-2"
        eventHandlers={
          Object {
            "click": [Function],
          }
        }
        icon={
          NewClass {
            "_initHooksCalled": true,
            "options": Object {
              "className": "preview-icn",
              "html": "<IconMock fill=\\"purple\\" width=\\"40\\" height=\\"40\\" class=\\"icon\\" aria-hidden=\\"true\\" style=\\"vertical-align:middle;flex-shrink:0\\" data-reactroot=\\"\\"></IconMock><div fill=\\"#ffffff\\" width=\\"16\\" height=\\"16\\" class=\\"icon\\" aria-hidden=\\"true\\" style=\\"vertical-align:middle;flex-shrink:0\\" data-reactroot=\\"\\"></div>",
              "iconAnchor": Array [
                20,
                40,
              ],
              "iconSize": Array [
                40,
                40,
              ],
              "popupAnchor": Array [
                0,
                -40,
              ],
            },
          }
        }
        key="2"
        position={
          Array [
            51.5074,
            -0.0901,
          ]
        }
      >
        <ProposalLeafletMapstyle__BlankPopup
          closeButton={false}
        >
          <Relay(Connect(ProposalMapPopover))
            proposal={
              Object {
                "$fragmentRefs": null,
                "$refType": null,
                "address": Object {
                  "lat": 51.5074,
                  "lng": -0.0901,
                },
                "category": Object {
                  "color": "purple",
                  "icon": "wheelchair",
                },
                "id": "pid4",
              }
            }
          />
        </ProposalLeafletMapstyle__BlankPopup>
      </ForwardRef(ContainerComponent)>
    </ForwardRef(ContainerComponent)>
    <ForwardRef(LeafComponent)
      position="bottomright"
    />
    <ProposalMapLoaderPane
      hasError={false}
      retry={[MockFunction]}
    />
  </ProposalLeafletMapstyle__StyledMap>
</ProposalLeafletMapstyle__MapContainer>
`;
